# jsonipc

./: CMakeLists.txt  README.md  jsonipc.pro
include/: jsonclient.h  jsonipc_global.h  jsonserver.h
include/jsonipc/: jsonclient.h  jsonipc_global.h  jsonserver.h
lib/: CMakeLists.txt  lib.pro
lib/include/jsonipc/: client.h  logging.h  server.h
lib/src/: client.cpp  logging.cpp  server.cpp
src/: jsonclient.cpp  jsonserver.cpp
